--- a/styles.css
+++ b/styles.css
@@ -1,72 +1,88 @@
-body{
+body {
     margin: 0;
-    width: 100%;    
-    background-image:linear-gradient(90deg, rgba(49, 49, 225, 0.8), rgba(84, 84, 169, 0.5)),
-    url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+    width: 100%;
+    background-image: linear-gradient(90deg, rgba(49, 49, 225, 0.8), rgba(84, 84, 169, 0.5)),
+        url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
     font-family: sans-serif;
     font-size: large;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    
+
+
+
 }
-header{
-    margin:3rem auto 2rem;
+
+header {
+    margin: 3rem auto 2rem;
 }
-h1,p{
+
+h1,
+p {
     margin: 10px auto;
     text-align: center;
     color: white;
 }
-form{
+
+form {
     width: 46%;
     min-width: 400px;
     margin: 0 auto;
     background-color: rgba(36, 32, 53, 0.7);
     border: none;
-    color:white;
-} 
-fieldset{
-    border:none;
+    color: white;
+}
+
+fieldset {
+    border: none;
     margin: 0;
     padding: 0;
-    
-}  
-label:first-of-type{
-    margin-top:40px;
-}
-label{
-    display: block;
-    margin: 20px 2rem 0 ;
 
 }
-input,select,textarea{
+
+label:first-of-type {
+    margin-top: 40px;
+}
+
+label {
+    display: block;
+    margin: 20px 2rem 0;
+
+}
+
+input,
+select,
+textarea {
     width: 100%;
     border-radius: 0.3rem;
     height: 35px;
     margin-top: 10px;
     font-size: 20px;
-    
-    
+
+
 }
-textarea{
+
+textarea {
     height: unset;
 }
-.inline{
+
+.inline {
     width: unset;
     vertical-align: middle;
     margin: 0;
     height: unset;
     transform: scale(1.8);
-    
+
 }
-input[type="submit"]{
+
+input[type="submit"] {
     background-color: lightgreen;
     color: white;
     height: 40px;
     margin-bottom: 50px;
     border: none;
-    }
-    p{
-        font-size: larger;
-    }
+}
+
+p {
+    font-size: larger;
+}
